--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
 
     <footer>
-        <p>For further inquiries, please contact [Your Contact Information].</p>
+        <p>For further inquiries, please contact citrixlabph@gmail.com.</p>
     </footer>
 
 </body>
