--- a/Contribution-Guidelines.html
+++ b/Contribution-Guidelines.html
@@ -40,82 +40,72 @@
 <body>
     <div class="container-lg px-3 my-5 markdown-body">
 
+        <!-- Main Heading with Link -->
         <h1><a href="https://citrixlab.github.io/ISO-3166-2-PH/">ISO-3166-2-PH</a></h1>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Project Study: ISO 3166-2:PH Integration</title>
+        <!-- Project Study Section -->
+        <section id="project-study">
+            <header>
+                <h1>Project Study: Integration of ISO 3166-2:PH Codes in Legal Databases</h1>
+                <h2>Contribution Guidelines</h2>
+            </header>
 
-        <header>
-            <h1>Project Study: Integration of ISO 3166-2:PH Codes in Legal Databases</h1>
-            <h2>Contribution Guidelines</h2>
-            <section id="contributing">
-                <h2 id="contributing-1">Contributing<a class="anchorjs-link " href="#contributing-1" aria-label="Anchor" data-anchorjs-icon=""
-                        style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h2>
-                <p>Interested contributors can follow the <a href="[link]">Contribution Guidelines</a> to participate in the
-                    project.</p>
+            <!-- Types of Contributions -->
+            <section id="types-of-contributions">
+                <h2>Types of Contributions</h2>
+                <ul>
+                    <li>
+                        <strong>Bug Reports</strong>: If you encounter a bug or unexpected behavior, please submit a detailed bug report. Include information about your environment, steps to reproduce the issue, and any relevant error messages.
+                    </li>
+                    <li>
+                        <strong>Feature Requests</strong>: Feel free to submit a feature request if you have an idea for a new feature or enhancement. Describe the proposed feature and how it adds value to the project.
+                    </li>
+                    <li>
+                        <strong>Code Contributions</strong>: We welcome code contributions to address issues or implement new features. Follow the provided guidelines to contribute.
+                    </li>
+                    <li>
+                        <strong>Documentation Improvements</strong>: If you find areas in the documentation that need clarification or expansion, please submit documentation improvements. Provide details on the sections that need enhancement or correction.
+                    </li>
+                </ul>
             </section>
 
-# Contribution Guidelines
+            <!-- Code Style Guidelines -->
+            <section id="code-style-guidelines">
+                <h2>Code Style Guidelines</h2>
+                <p>Maintain a consistent coding style with the existing codebase. Follow any specific coding guidelines outlined in the project's documentation.</p>
+            </section>
 
-Thank you for considering contributing to our project! We welcome contributions in various forms, including bug reports, feature requests, code contributions, and improvements to documentation. Your involvement helps make our project better.
+            <!-- Code Review Process -->
+            <section id="code-review-process">
+                <h2>Code Review Process</h2>
+                <p>All contributions will go through a code review process. Feedback will be provided, and revisions may be requested before merging.</p>
+            </section>
 
-## Types of Contributions
-
-### Bug Reports
-
-If you encounter a bug or unexpected behavior, please submit a detailed bug report. Include information about your environment, steps to reproduce the issue, and any relevant error messages.
-
-### Feature Requests
-
-If you have an idea for a new feature or enhancement, feel free to submit a feature request. Describe the proposed feature and how it adds value to the project.
-
-### Code Contributions
-
-We welcome code contributions to address issues or implement new features. Follow the steps below to contribute:
-
-1. Fork the repository.
-2. Create a new branch for your feature or bug fix: `git checkout -b feature-name`.
-3. Make your changes and commit them: `git commit -m 'Description of changes'`.
-4. Push your changes to your fork: `git push origin feature-name`.
-5. Submit a pull request with a clear description of your changes.
-
-### Documentation Improvements
-
-If you find areas in the documentation that need clarification or expansion, please submit documentation improvements. Provide details on the sections that need enhancement or correction.
-
-## Code Style Guidelines
-
-Maintain a consistent coding style with the existing codebase. Follow any specific coding guidelines outlined in the project's documentation.
-
-## Code Review Process
-
-All contributions will go through a code review process. Feedback will be provided, and revisions may be requested before merging.
-
-
+            <!-- License Section -->
             <section id="license">
-                <h2 id="license-1">License<a class="anchorjs-link " href="#license-1" aria-label="Anchor"
-                        data-anchorjs-icon="" style="font: 1em / 1 anchorjs-icons; padding-left: 0.375em;"></a></h2>
+                <h2>License</h2>
                 <p>The project is shared under the specified <a href="license">license</a>.</p>
             </section>
 
+            <!-- Footer with Contact Information -->
             <footer>
                 <p>For further inquiries, please contact <a href="[link]">citrixlabph@gmail.com</a>.</p>
             </footer>
-        </header>
+        </section>
 
+        <!-- GitHub Edit Link -->
         <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-            This site is open source. <a href="https://github.com/CitrixLab/ISO-3166-2-PH/edit/main/README.md">Improve
-                this page</a>.
+            This site is open source. <a href="https://github.com/CitrixLab/ISO-3166-2-PH/edit/main/README.md">Improve this page</a>.
         </div>
-
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js"
-        integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+
+    <!-- Anchor.js Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+    
+    <!-- Initialize Anchor.js -->
     <script>
         anchors.add();
     </script>
-
 </body>
 
 </html>
