--- a/Contribution-Guidelines.html
+++ b/Contribution-Guidelines.html
@@ -48,6 +48,7 @@
             <header>
                 <h1>Project Study: Integration of ISO 3166-2:PH Codes in Legal Databases</h1>
                 <h2>Contribution Guidelines</h2>
+                <p>Thank you for considering contributing to our project! We welcome contributions in various forms, including bug reports, feature requests, code contributions, and improvements to documentation. Your involvement helps make our project better.</p>
             </header>
 
             <!-- Types of Contributions -->
