--- a/Contribution-Guidelines.html
+++ b/Contribution-Guidelines.html
@@ -86,7 +86,7 @@
             <!-- License Section -->
             <section id="license">
                 <h2>License</h2>
-                <p>The project is shared under the specified <a href="license">license</a>.</p>
+                <p>The project is shared under the specified <a href="license">MIT License</a>.</p>
             </section>
 
             <!-- Footer with Contact Information -->
