--- a/Getting-Started.html
+++ b/Getting-Started.html
@@ -53,7 +53,36 @@
             <p>To set up and run the project locally, follow these instructions:</p>
 
             <!-- Prerequisites, Installation, Configuration, Database Setup, Running the Project, Usage -->
-            <!-- ... (Remaining content from your original post) ... -->
+            <h3>Prerequisites</h3>
+            <p>Make sure you have the following tools and dependencies installed on your machine:</p>
+            <ul>
+                <li><a href="link_to_tool1">Tool 1</a>: Description of Tool 1.</li>
+                <li><a href="link_to_tool2">Tool 2</a>: Description of Tool 2.</li>
+                <!-- Add more tools as needed -->
+            </ul>
+
+            <h3>Installation</h3>
+            <ol>
+                <li>Clone the repository to your local machine:
+                    <pre><code>git clone https://github.com/your-username/your-project.git</code></pre>
+                </li>
+                <li>Navigate to the project directory:
+                    <pre><code>cd your-project</code></pre>
+                </li>
+                <li>Install project dependencies:
+                    <pre><code>npm install</code></pre>
+                </li>
+            </ol>
+
+            <h3>Configuration</h3>
+            <ol>
+                <li>Open the <code>config.js</code> file located in the <code>config/</code> directory.</li>
+                <li>Update the configuration settings based on your environment and requirements.
+                    <pre><code>module.exports = {
+    // Configuration options...
+};</code></pre>
+                </li>
+            </ol>
 
             <section id="license">
                 <h2>License</h2>
