--- a/Comprehensive-Study.html
+++ b/Comprehensive-Study.html
@@ -48,7 +48,8 @@
             </header>
 
             <h2>Executive Summary:</h2>
-            <p>The integration of ISO 3166-2:PH codes into legal databases stands as a pivotal initiative...</p>
+            <p>The integration of ISO 3166-2:PH codes into legal databases stands as a pivotal initiative to elevate the efficiency and precision of organizing and retrieving information concerning the principal subdivisions of the Philippines.
+             This comprehensive study delves into the historical significance, origin, objectives, implementation plan, and the profound significance of this project within the legal domain.</p>
 
             <!-- Historical Significance and Origin -->
             <section id="historical-significance">
