--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLA5UMPk0CsbCrqHmMCRykMJEuYWQxP89WCW LwC6GU=" crossorigin=""/>
 </head>
 <body>
+
+    <header>
+        <h1>Project Study: Integration of ISO 3166-2:PH Codes in Legal Databases</h1>
+<h2>SDA Prototype</h2>
+    </header>
     <div id="mapContainer"></div>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwT8AN9zwUwzEOInZqBfcYEvaHgATQjtT/HcQ=" crossorigin=""></script>
     <script>
