--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -52,6 +52,11 @@
       frameborder="0" allowfullscreen>
   </iframe>
 
+<iframe width="600" height="400" id="gmap_canvas"
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1mq12!2m2!1d-122.4194155!2d37.774900!3m2!1i1024!2i768!4f13.1"
+  frameborder="0" allowfullscreen>
+</iframe>
+
     <div id="mapContainer"></div>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwT8AN9zwUwzEOInZqBfcYEvaHgATQjtT/HcQ=" crossorigin=""></script>
     <script>
