--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -47,11 +47,9 @@
 <h2>SDA Prototype</h2>
     </header>
 
+<iframe width="100%" height="600" src="https://maps.google.com/maps?output=embed&q=1600%20Pennsylvania%20Ave%20NW%2C%20Washington%2C%20DC%2020006%2C%20USA"></iframe>
 
-<iframe width="300" height="200" id="gmap_canvas"
-  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1mq12!2m2!1d-122.4194155!2d37.774900!3m2!1i1024!2i768!4f13.1"
-  frameborder="0" allowfullscreen>
-</iframe>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 <div id="mapContainer" style="width: 600px; height: 400px;"></div>
 
