--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -36,7 +36,12 @@
     <!-- link rel="shortcut icon" type="image/x-icon" href="/ISO-3166-2-PH/favicon.ico" -->
 
     <!-- end custom head snippets -->
-
+<style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
 </head>
 
 
@@ -46,10 +51,39 @@
         <h1>Project Study: Integration of ISO 3166-2:PH Codes in Legal Databases</h1>
 <h2>SDA Prototype</h2>
     </header>
+    
 
-<iframe width="100%" height="600" src="https://maps.google.com/maps?output=embed&q=1600%20Pennsylvania%20Ave%20NW%2C%20Washington%2C%20DC%2020006%2C%20USA"></iframe>
+    <h1>Your Geographical Location</h1>
+    <div id="map"></div>
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script>
+        // Get the user's location using the Geolocation API
+        navigator.geolocation.getCurrentPosition(
+            (position) => {
+                const latitude = position.coords.latitude;
+                const longitude = position.coords.longitude;
+
+                // Create a map centered at the user's location
+                const map = new google.maps.Map(document.getElementById('map'), {
+                    center: { lat: latitude, lng: longitude },
+                    zoom: 15
+                });
+
+                // Add a marker to the map
+                new google.maps.Marker({
+                    position: { lat: latitude, lng: longitude },
+                    map: map,
+                    title: 'Your Location'
+                });
+            },
+            (error) => {
+                console.error('Error getting location:', error.message);
+            }
+        );
+    </script>
+
+    <!-- Include the Google Maps JavaScript API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
 
 <div id="mapContainer" style="width: 600px; height: 400px;"></div>
 
