--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -42,6 +42,6 @@
     </script>
 
     <!-- Include the Google Maps JavaScript API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuG8DG7xPrUlgSJlkV2me2QaV4LswBFz8"></script>
 </body>
 </html>
