--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -9,6 +9,15 @@
             height: 400px;
             width: 100%;
         }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
     </style>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.147/build/three.min.js"></script>
@@ -107,52 +116,47 @@ animate();
 </script>
 
 
-<svg id="density-map" width="600" height="400"></svg>
+<h1>Ramsey Numbers (Sample Data)</h1>
+    <table id="ramsey-data"></table>
+ 
 
 <script>
-const svg = document.getElementById('density-map');
-const svgNS = 'http://www.w3.org/2000/svg'; // SVG namespace
+const table = document.getElementById('ramsey-data');
 
-// Sample population density data (replace with your data)
-const densityData = [[100, 250, 300], [500, 700, 1200], [400, 800, 900]];
+// Sample Ramsey number data (replace with your actual data)
+const ramseyData = [
+  { n1: 3, n2: 3, r: 6 },
+  { n1: 4, n2: 4, r: 18 },
+  { n1: 5, n2: 5, r: unknown }, // Unknown value for demonstration
+  { n1: 6, n2: 6, r: 32 },
+];
 
-const gridSize = densityData.length;
-const cellSize = 40; // Adjust cell size as needed
-const colorMap = {
-  low: '#add8e6', // Light blue for low density
-  medium: '#fffa99', // Yellow for medium density
-  high: '#ff595e' // Red for high density
-};
+function createTableHeader() {
+  const headerRow = table.insertRow();
+  const th1 = headerRow.insertCell();
+  const th2 = headerRow.insertCell();
+  const th3 = headerRow.insertCell();
+  th1.textContent = 'n1';
+  th2.textContent = 'n2';
+  th3.textContent = 'R(n1, n2)';
+}
 
-function getDensityColor(density) {
-  if (density < 500) {
-    return colorMap.low;
-  } else if (density < 1000) {
-    return colorMap.medium;
-  } else {
-    return colorMap.high;
+function createDataRow(data) {
+  const row = table.insertRow();
+  const cell1 = row.insertCell();
+  const cell2 = row.insertCell();
+  const cell3 = row.insertCell();
+  cell1.textContent = data.n1;
+  cell2.textContent = data.n2;
+  cell3.textContent = data.r;
+  if (data.r === 'unknown') {
+    cell3.style.fontStyle = 'italic'; // Style unknown values differently
   }
 }
 
-// Function to create a colored rectangle for each cell
-function createDensityRect(density, x, y) {
-  const rect = document.createElementNS(svgNS, 'rect');
-  rect.setAttribute('x', x);
-  rect.setAttribute('y', y);
-  rect.setAttribute('width', cellSize);
-  rect.setAttribute('height', cellSize);
-  rect.setAttribute('fill', getDensityColor(density));
-  return rect;
-}
-
-// Create and append rectangles based on density data
-for (let i = 0; i < gridSize; i++) {
-  for (let j = 0; j < gridSize; j++) {
-    const density = densityData[i][j];
-    const rect = createDensityRect(density, j * cellSize, i * cellSize);
-    svg.appendChild(rect);
-  }
-}
+createTableHeader();
+ramseyData.forEach(data => createDataRow(data));
 </script>
+
 </body>
 </html>
