--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -84,10 +84,10 @@ function createDensityCube(density) {
 // Function to define color based on density (adjust color mapping as needed)
 function getDensityColor(density) {
   const colorMap = {
-    low: #add8e6, // Light blue for low density
-    medium: #fffa99, // Yellow for medium density
-    high: #ff595e // Red for high density
-  };
+  low: 'add8e6', // Light blue for low density
+  medium: 'fffa99', // Yellow for medium density
+  high: 'ff595e' // Red for high density
+};
   if (density < 500) {
     return colorMap.low;
   } else if (density < 1000) {
