--- a/sda-prototype.html
+++ b/sda-prototype.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>Your Geographical Location</h1>
-<p><a href="sda-prototype.html">sda-prototype.html</a></p>
+<p><a href="geomap.html">geomap sample</a></p>
     <div id="map"></div>
 
     <script>
