--- a/geomap.html
+++ b/geomap.html
@@ -28,7 +28,7 @@
         </div>
 
         <div data-role="footer">
-            <h3>Hootesh Rambarassah</h3>
+            <p>geomap</p>
         </div>
     </div>
 </body>
